--- a/pom.xml
+++ b/pom.xml
@@ -10,11 +10,15 @@
 	</parent>
 	<groupId>com.amalvadkar</groupId>
 	<artifactId>ihmsserviceauth</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<name>ihmsserviceauth</name>
 	<description>Internal Human Resource Management System Authentication Service</description>
 	<properties>
 		<java.version>21</java.version>
+		<firebase-admin.version>9.2.0</firebase-admin.version>
+		<ihmsservicecommon.version>0.0.4</ihmsservicecommon.version>
+		<jjwt.version>0.9.1</jjwt.version>
+		<jaxb-api.version>2.3.0</jaxb-api.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -45,6 +49,31 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>com.google.firebase</groupId>
+			<artifactId>firebase-admin</artifactId>
+			<version>${firebase-admin.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.amalvadkar</groupId>
+			<artifactId>ihmsservicecommon</artifactId>
+			<version>${ihmsservicecommon.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>${jjwt.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>${jaxb-api.version}</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
